# a2wsgi-examples

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .taplo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  prek.toml  pyproject.toml  setup.cfg  techstack.md  techstack.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: codecov.yml  yamlfmt.yml
.github/workflows/: check-pr-title.yml  ci.yml
src/: main.py
src/app/: __init__.py  main.py  schemas.py
src/app/applications/: __init__.py
src/app/applications/aiohttp/: __init__.py  app.py
src/app/applications/blacksheep/: __init__.py  app.py
src/app/applications/bottle/: __init__.py  app.py
src/app/applications/connexion/: __init__.py  app.py
src/app/applications/django/: __init__.py  app.py
src/app/applications/falcon/: __init__.py  app.py
src/app/applications/fastapi/: __init__.py  app.py  router.py
src/app/applications/flask/: __init__.py  app.py
src/app/applications/flet/: __init__.py  app.py
src/app/applications/gradio/: __init__.py  app.py
src/app/applications/hug/: __init__.py  app.py
src/app/applications/litestar/: __init__.py  app.py
src/app/applications/nicegui/: __init__.py  frontend.py
src/app/applications/pyramid/: __init__.py  app.py
src/app/applications/pywebio/: __init__.py  app.py
src/app/applications/quart/: __init__.py  app.py
src/app/applications/robyn/: __init__.py  app.py
src/app/applications/sanic/: __init__.py  app.py
src/app/applications/starlette/: __init__.py  app.py
src/app/applications/tornado/: __init__.py  app.py
src/app/applications/webapp2/: __init__.py  app.py
src/applications/: schemas.py
src/applications/aiohttp/: app.py
src/applications/bottle/: app.py
src/applications/django/: app.py
src/applications/fastapi/: app.py  router.py
src/applications/flask/: app.py
src/applications/flet/: app.py
src/applications/litestar/: app.py
src/applications/pywebio/: app.py
src/applications/starlette/: app.py
src/applications/tornado/: app.py
tests/: __init__.py  conftest.py  test_main.py
