[tool.poetry]
name = "FastAPI Mount Examples"
version = "0.1.0"
description = ""
authors = ["hasansezertasan <hasansezertasan@gmail.com>"]
readme = "README.md"
maintainers = ["hasansezertasan <hasansezertasan@gmail.com>"]

[tool.ruff]
# Run `ruff linter` command to see all available linters and their descriptions
target-version = "py311"
line-length = 120
select = [
  # "B",
  # "C",
  "E",
  "F",
  "W",
  "I",
  "B9",
]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "E501", # line too long, handled by black
  "F401", # imported but unused
  "E402", # module level import not at top of file
  "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
  "F821", # undefined name
]
exclude = ["alembic", "migrations"]
show-fixes = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip_glob = ["**/alembic/**", "**/migrations/**"]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic
  )/
)
'''


[tool.poe.tasks]
black = "black ."
isort = "isort ."
ruff = "ruff ."
bir = ["black", "isort", "ruff"]
line-count = "pygount --format=summary"
test = "pytest -v -s"
run = "uvicorn --port 5000 --reload main:app"
clean = "frenchmaid clean"
requirements = "poetry export -f requirements.txt --output pyproject.txt --without-hashes"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.22.0"
a2wsgi = "^1.7.0"
FastAPI = "^0.101.0"
Flask = "^3.0.0"
Starlette = "^0.27.0"
Django = "^4.2.6"
bottle = "^0.12.25"
litestar = "^2.1.1"
gradio = "^3.47.1"
pywebio = "^1.8.2"
nicegui = "^1.3.16"
flet-fastapi = "^0.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
isort = "^5.12.0"
black = { extras = ["jupyter"], version = "^23.9.1" }
ruff = "^0.0.292"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
