[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "a2wsgi>=1.10.10",
  "blacksheep>=2.4.5",
  "bottle>=0.13.4",
  "django>=5.2.8",
  "falcon>=4.2.0",
  "fastapi>=0.121.3",
  "flask>=3.1.2",
  "flet[all]>=0.28.3",
  "gradio>=5.50.0",
  "litestar>=2.18.0",
  "nicegui>=3.3.1",
  "pyramid>=2.0.2",
  "pywebio>=1.8.4",
  "quart>=0.20.0",
  "sanic>=25.3.0",
  "uvicorn>=0.38.0",
]


[dependency-groups]
dev = [
  "ruff==0.14.6",
  "taplo==0.9.3",
  "ty==0.0.1a27",
  "typos==1.39.2",
  "validate-pyproject[all]==0.24.1",
  "vulture==2.14",
]
test = ["pytest==9.0.1", "pytest-asyncio==1.3.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
fix = true
output-format = "full"
preview = true
show-fixes = true
src = ["src", "tests", "examples"]
target-version = "py310"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true
preview = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["COM812", "CPY", "FIX", "TD", "T201"]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]


[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.mccabe]
max-complexity = 5


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ['S101']


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true
